image alignment issue now fixed, update movenextmonth and moveprevmonth functions to include the getactivities call

--- a/app/assets/stylesheets/auth/users/profiles.scss
+++ b/app/assets/stylesheets/auth/users/profiles.scss
@@ -13,9 +13,15 @@
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);  
 }
 
+
+.helper{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
 .calendar_day_background_image{
-   width: auto;
+   width: 100%;
    height: auto;
-   max-width: 100%;
-   max-height: 100%;
+   vertical-align:middle;
 }
